# tax-doc-scraping

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
api/: main.py
chunker/: chunk.py
cli/: search.py
crawler/: scrapy.cfg
crawler/taxscraper_crawler/: __init__.py  items.py  middlewares.py  pipelines.py  settings.py
crawler/taxscraper_crawler/spiders/: cra_spider.py
embeddings/: embed.py  qdrant_client.py
extractor/: extract.py
seeds/: cra.yaml
src/taxscraper/: __init__.py  config.py
src/taxscraper/utils/: hashing.py  html.py
tests/: test_extractor.py  test_hashing.py  test_url_scope.py
