[project]
name = "taxscraper"
version = "0.1.0"
description = "CRA tax document scraping and RAG pipeline"
authors = [{name = "OpenAI", email = "opensource@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scrapy",
    "trafilatura",
    "lxml",
    "sentence-transformers",
    "qdrant-client",
    "fastapi",
    "uvicorn",
    "click",
    "pyyaml",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "black",
    "pytest",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
